2007-06-11  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpscaletool.c: removed unused variable.

2007-06-11  Mukund Sivaraman  <muks@mukund.org>

	* configure.in: bumped required libexif version to 0.6.15. This
	seems to fix #358117 for the various test images that were reported
	in it, and its duplicates. This version is in Debian testing and
	Fedora 7.

2007-06-11  Sven Neumann  <sven@gimp.org>

	Applied the second patch from Zbigniew Chyla. Improves
	boundary_sort() performance by reducing its time complexity from
	O(n*n) to ~O(n*log n) (bug #388538).

	* app/base/boundary.c (boundary_sort): prepare two arrays of
	pointers to segments, each sorted by different pair of
	coordinates ((x1,y1) and (x2,y2)); use new find_segment(),
	passing both arrays to it.
	(find_segment): new implementation that employs binary search to
	find matching segment, using sorted arrays prepared by
	boundary_sort().

2007-06-11  Sven Neumann  <sven@gimp.org>

	Applied patch from Zbigniew Chyla from bug #388538:

	* app/base/boundary.c (boundary_sort): simplified a bit by
	replacing "while" with "for" loop, now we don't search from the
	beginning of the array in each iteration.

2007-06-09  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-resize.[ch]: added
	gimp_image_resize_to_selection().

	* app/actions/image-actions.c
	* app/actions/image-commands.[ch]
	* app/widgets/gimphelp-ids.h
	* menus/image-menu.xml.in: added an action and a menu item for it.
	Fixes bug #335672.

	* plug-ins/common/align_layers.c: resolved a conflicting mnemonic.

2007-06-09  Sven Neumann  <sven@gimp.org>

	* app/core/gimpselection.c (gimp_selection_extract): fixed
	parameter passed to gimp_image_get_background(). Fixes bug #445719.

2007-06-08  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.h: Applied patch from Daniel
	Richard G. that defines SCHEME_EXPORT as extern for non-Windows
	systems. Fixes bug #444964.

2007-06-08  Sven Neumann  <sven@gimp.org>
